--- a/views/lexicon/patterns/rules/event-based.html.twig
+++ b/views/lexicon/patterns/rules/event-based.html.twig
@@ -164,6 +164,7 @@
 
                             {{
                                 rule.block_and({
+                                    'notifications': true,
                                     'show_and': false,
                                     'show_or': false,
                                     'inputs': [
@@ -224,6 +225,8 @@
 
                             {{
                                 rule.block_or({
+                                    'notifications': true,
+                                    'notificationsCount': '123',
                                     'class': 'rule--indented',
                                     'error': true,
                                     'inputs': [
