--- a/views/lexicon/forms/password.html.twig
+++ b/views/lexicon/forms/password.html.twig
@@ -169,6 +169,13 @@
             'help': 'Stop! Can’t touch this'
         })
     }}
+    {{
+        form.password({
+            'id': 'guid-' ~ random(),
+            'label': '"readonly": true',
+            'readonly': true
+        })
+    }}
 
     {{ form.fieldset_end() }}
     {{ form.fieldset_start({ 'legend': 'Grid Sizes' }) }}
