--- a/views/lexicon/forms/text.html.twig
+++ b/views/lexicon/forms/text.html.twig
@@ -257,6 +257,15 @@
             'placeholder': 'Placeholder'
         })
     }}
+    {{
+        form.text({
+            'id': 'guid-' ~ random(),
+            'label': '"readonly": true',
+            'readonly': true,
+            'help': 'Can you read me, over?',
+            'value': 'value'
+        })
+    }}
 
     {{ form.fieldset_end() }}
     {{ form.fieldset_start({ 'legend': 'Grid Sizes' }) }}
@@ -433,6 +442,16 @@
             'label': 'Prepended &amp; Appended',
             'append': '.00',
             'prepend': '£'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'guid-' ~ random(),
+            'label': 'Prepended &amp; Appended &amp Readonly',
+            'append': '.00',
+            'prepend': '£',
+            'readonly': true
         })
     }}
 
