--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -911,6 +911,7 @@ format                 | string | Options for this can be `default`, `US` or `re
 id                     | string | A unique identifier, will also be used as the label's `for` attribute
 name                   | string | The name of this control
 placeholder            | string | A short hint that describes the expected value
+readonly               | bool   | Adds `readonly` attribute
 required               | bool   | Adds `required` attribute
 value                  | string | Specifies the value of the input
 data-*                 | string | Data attributes, eg: `'data-foo': 'bar'`
@@ -1620,6 +1621,7 @@ form        | string | Specific one or more forms this label belongs to
 id          | string | A unique identifier, will also be used as the label's `for` attribute
 name        | string | The name of this control
 placeholder | string | A short hint that describes the expected value
+readonly    | bool   | Adds `readonly` attribute
 required    | bool   | Adds `required` attribute
 value       | string | Specifies the value of the input
 data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
@@ -2009,8 +2011,8 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
             'inputs': [
                 elem.select(
                     options
-					|exclude('bare class error guidance guidance-container help label show-label prepend_type append_type')
-					|merge({'class': 'select'})
+                    |exclude('bare class error guidance guidance-container help label show-label prepend_type append_type')
+                    |merge({'class': 'select'})
                 )
             ]
         })
@@ -2185,6 +2187,7 @@ form        | string | Specific one or more forms this label belongs to
 id          | string | A unique identifier, will also be used as the label's `for` attribute
 name        | string | The name of this control
 placeholder | string | A short hint that describes the expected value
+readonly    | bool   | Adds `readonly` attribute
 required    | bool   | Adds `required` attribute
 value       | string | Specifies the value of the input
 data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
@@ -2257,6 +2260,7 @@ form        | string | Specific one or more forms this label belongs to
 id          | string | A unique identifier, will also be used as the label's `for` attribute
 name        | string | The name of this control
 placeholder | string | A short hint that describes the expected value
+readonly    | bool   | Adds `readonly` attribute
 required    | bool   | Adds `required` attribute
 rows        | int    | The height, in rows (default 2)
 value       | string | Specifies the value of the input
@@ -2326,6 +2330,7 @@ form        | string | Specific one or more forms this label belongs to
 id          | string | A unique identifier, will also be used as the label's `for` attribute
 name        | string | The name of this control
 placeholder | string | A short hint that describes the expected value
+readonly    | bool   | Adds `readonly` attribute
 required    | bool   | Adds `required` attribute
 value       | string | Specifies the value of the input
 data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
