Revert to FontAwesome Free

--- a/stylesheets/pulsar.scss
+++ b/stylesheets/pulsar.scss
@@ -22,7 +22,7 @@ $ie-version: 12 !default;
 // scss-lint:enable all
 
 // Proxima Nova (requires license)
-$font-path: '../fonts/';
+$font-path: '../../../fonts/';
 @import '../fonts/config.fonts';
 
 // Mixins
