--- a/views/lexicon/tabs/modals.html.twig
+++ b/views/lexicon/tabs/modals.html.twig
@@ -30,7 +30,7 @@
 
 <p>
     Launch a responsive modal<br/>
-    <button class="btn" data-toggle="modal" data-target="#modalResponsive">Launch Responsive Modal</button>
+    <button class="btn" data-toggle="modal" data-target="#modalResponsive">Launch New Responsive Modal</button>
 </p>
 
 <p>
